--- a/lab3/index.ipynb
+++ b/lab3/index.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('./heart.csv')"
+    "data = pd.read_csv('../datasets/heart.csv')"
    ]
   },
   {
