--- a/rk1/index.ipynb
+++ b/rk1/index.ipynb
@@ -48,7 +48,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('./heart.csv')"
+    "data = pd.read_csv('../datasets/heart.csv')"
    ]
   },
   {
